Less compiler working and work on header

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,8 @@
 // variables
-@PrimaryColor:  #2b2d2f;
-@SecondaryColor: #eee;
-@LtAccent: #DBA72E;
-@DkAccent: #000222;
+@PrimaryColor:  #011502;
+@SecondaryColor: #f9f4f5	;
+@LtAccent: #ff5d73;
+@DkAccent: #a349a4;
 @tablet: ~"(max-width: 800px)";
 @mobile: ~"(max-width: 500px)";
 @fontStack: @primaryFont;
