--- a/less/small.less
+++ b/less/small.less
@@ -1,5 +1,21 @@
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+
+/*-----------------------Header------------------------------------------*/
+header{
+    
+    background-color: @PrimaryColor;
+
+    .headerLimited{
+    flex: flex-box;
+    justify-content: space-between;
+    a{
+        text-decoration: none;
+        color: @SecondaryColor;
+        font-size: 2rem;
+    }//a
+}//headerLimited
+}//header
 #hamburgerBtn { display: none; } /* hide the navigation button by default */
 
 @media only screen and (max-width: 64rem) {
@@ -13,7 +29,7 @@
         left: 0;
         width: 100%;
         height: 2.75rem;
-        background-color: #ba3659; /* change the menu color */
+        background-color: @DkAccent; /* change the menu color */
     }
 
 	#hamburgerBtn {
@@ -39,7 +55,7 @@
     height: 0;
     overflow: hidden;
     width: 20rem;
-    background-color: #ba3659; /* change the menu color */
+    background-color: @DkAccent; /* change the menu color */
     margin: 0;
     padding: 0;
     z-index: 998;
@@ -89,3 +105,7 @@
 }
 #primaryNav li:hover ul {display: block;}
 } /* End Mobile Styles */
+
+/*---------- slick slider ----------------------*/
+div.myslider div {width: 100%}
+div.myslider div img {width: 100%}
