--- a/css/main.css
+++ b/css/main.css
@@ -4,118 +4,19 @@
   box-sizing: border-box;
 }
 /*-----------------------Header------------------------------------------*/
-header {
-  background-color: #011502;
-}
 header .headerLimited {
-  flex: flex-box;
+  display: flex;
   justify-content: space-between;
 }
-header .headerLimited a {
+header .headerLimited .number {
   text-decoration: none;
   color: #f9f4f5;
   font-size: 2rem;
 }
-#hamburgerBtn {
-  display: none;
-}
-/* hide the navigation button by default */
-@media only screen and (max-width: 64rem) {
-  /* Navigation Button  -------------------------------------------------------- */
-  body {
-    padding-top: 50px;
-  }
-  nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 2.75rem;
-    background-color: #a349a4;
-    /* change the menu color */
-  }
-  #hamburgerBtn {
-    display: block;
-    width: 7rem;
-    height: 2.75rem;
-    background-image: url('../images/menuOpenWhite.png');
-    background-color: rgba(0, 0, 0, 0.1);
-    background-position: 2vw center;
-    background-repeat: no-repeat;
-    border: 0 none;
-  }
-  #hamburgerBtn.open {
-    background: url('../images/menuCloseWhite.png');
-    background-position: 2vw center;
-    background-repeat: no-repeat;
-  }
-  /* Navigation Bar -------------------------------------------------------- */
-  #primaryNav {
-    height: 0;
-    overflow: hidden;
-    width: 20rem;
-    background-color: #a349a4;
-    /* change the menu color */
-    margin: 0;
-    padding: 0;
-    z-index: 998;
-    font-family: Verdana;
-    font-weight: normal;
-  }
-  #primaryNav li.active a {
-    background-color: rgba(0, 0, 0, 0.25);
-  }
-  #primaryNav li a {
-    display: block;
-    width: 100%;
-    padding: 0.75rem 2vw;
-    font-size: 14px;
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.15);
-    color: white;
-    text-decoration: none;
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-  }
-  #primaryNav li a:hover {
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  /* Toggle the navigation bar to expand down  */
-  #primaryNav.open {
-    height: auto;
-  }
-  /* Submenus – optional .parent class indicates dropdowns */
-  #primaryNav > li:hover > a {
-    background: rgba(0, 0, 0, 0.5);
-  }
-  #primaryNav li.parent > a:after {
-    font-size: 0.75rem;
-    content: "\25BC";
-    color: rgba(255, 255, 255, 0.5);
-    float: right;
-  }
-  #primaryNav li.parent > a:hover {
-    background: rgba(0, 0, 0, 0.75);
-  }
-  /*hide the sub menu items by default*/
-  #primaryNav li ul {
-    display: none;
-    background: rgba(0, 0, 0, 0.3);
-    padding: 0;
-  }
-  #primaryNav li ul a {
-    border-top: solid 1px rgba(0, 0, 0, 0.2);
-    font-size: 12px;
-    padding: 10px 5%;
-    font-weight: normal;
-  }
-  #primaryNav li:hover ul {
-    display: block;
-  }
-}
-/* End Mobile Styles */
 /*---------- slick slider ----------------------*/
-div.myslider div {
+.myslider {
   width: 100%;
 }
-div.myslider div img {
+.myslider img {
   width: 100%;
 }
