Images for navigation added

--- a/less/index.less
+++ b/less/index.less
@@ -4,6 +4,7 @@
 @import "small.less";
 @import "medium.less";
 @import "large.less";
+@import "navigation.less";
 
 //mixins
 .customLayout(@layout){
