--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,7 +20,7 @@
         left: 0;
         width: 100%;
         height: 2.75rem;
-        background-color: #ba3659; /* change the menu color */
+        background-color: @PrimaryColor; /* change the menu color */
     }
 
 	#hamburgerBtn {
@@ -46,7 +46,7 @@
         height: 0;
         overflow: hidden;
 		width: 20rem;
-		background-color: #ba3659; /* change the menu color */
+		background-color: @PrimaryColor;/* change the menu color */
 		margin: 0;
 		padding: 0;
 		z-index: 998;
