--- a/less/reset.less
+++ b/less/reset.less
@@ -48,3 +48,4 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
