--- a/less/landing.less
+++ b/less/landing.less
@@ -13,16 +13,26 @@
     
     /*---------- Articles ----------------------*/
     .articleOn{
-        display:block;
+        position:relative;
         width: 33.33%;
 
         img{
             position: absolute;
+            opacity: 75%;
+        }
+
+        img:hover{
+            opacity: 100%;
         }
 
         span{
-            position: fixed;
-            top:0;
+            position: absolute;
+            display:block;
+            bottom:0;
+            width: 100%;
+            color: #fff;
+            font-size: 1.5rem;
+            background-color: rgba(14, 12, 12, 0.5)
         }
    
 }
