--- a/less/main.less
+++ b/less/main.less
@@ -1,9 +1,10 @@
 //imports
-@import "resest.less";
+@import "reset.less";
 @import "variables.less";
-@import "small.less";
-@import "medium.less";
-@import "large.less";
+@import "navigation.less";
+@import "landing.less";
+@import "header.less";
+
 
 //mixins
 .customLayout(@layout){
