--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,283 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-/*-----------------------Header------------------------------------------*/
-header {
-  background-color: #f9f4f5;
+/*Change the menubar color on line 23 */
+/*Change the dropdown menu color on line 49*/
+/*If you have a light background color then change the background image on lines 30 and 37 to load menuOpenBlack and menuCloseBlack*/
+/*Adjust the media query max-width value on line 12 to match your breakpoint between the small and medium screens OR between the medium and large screens*/
+/*  apply a natural box layout model to all elements  */
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-header .headerLimited {
-  max-width: 1200px;
+/* Navigation for Large Screens  -------------------------------------------------------- */
+.navLimited {
+  background-color: #011502;
+}
+.navBar {
   display: flex;
   justify-content: space-between;
-  align-content: flex-end;
-}
-header .headerLimited .number {
-  text-decoration: none;
-  color: #011502;
-  font-size: 2rem;
-  padding-top: 5%;
-}
-.sizeRestraint {
+  align-content: center;
   max-width: 1200px;
+  margin: 0 auto;
 }
+nav {
+  border: yellow solid 4px;
+  width: 33.33%;
+}
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  padding: 1%;
+}
+nav li {
+  font-size: 1rem;
+  color: #fff;
+}
+nav a {
+  text-decoration: none;
+  color: #fff;
+}
+.search {
+  align-self: center;
+  margin-right: 0;
+}
+.button {
+  margin-left: 0;
+}
+#hamburgerBtn {
+  display: none;
+}
+/* hide the navigation button by default */
+@media only screen and (max-width: 64rem) {
+  /* Navigation Button  -------------------------------------------------------- */
+  body {
+    padding-top: 50px;
+  }
+  nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2.75rem;
+    background-color: #011502;
+    /* change the menu color */
+  }
+  #hamburgerBtn {
+    display: block;
+    width: 7rem;
+    height: 2.75rem;
+    background-image: url('../images/menuOpenWhite.png');
+    background-color: rgba(0, 0, 0, 0.1);
+    background-position: 2vw center;
+    background-repeat: no-repeat;
+    border: 0 none;
+  }
+  #hamburgerBtn.open {
+    background: url('../images/menuCloseWhite.png');
+    background-position: 2vw center;
+    background-repeat: no-repeat;
+  }
+  /* Navigation Bar -------------------------------------------------------- */
+  #primaryNav {
+    height: 0;
+    overflow: hidden;
+    width: 20rem;
+    background-color: #011502;
+    /* change the menu color */
+    margin: 0;
+    padding: 0;
+    z-index: 998;
+    font-family: Verdana;
+    font-weight: normal;
+  }
+  #primaryNav li.active a {
+    background-color: rgba(0, 0, 0, 0.25);
+  }
+  #primaryNav li a {
+    display: block;
+    width: 100%;
+    padding: 0.75rem 2vw;
+    font-size: 14px;
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.15);
+    color: white;
+    text-decoration: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+  }
+  #primaryNav li a:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  /* Toggle the navigation bar to expand down  */
+  #primaryNav.open {
+    height: auto;
+  }
+  /* Submenus – optional .parent class indicates dropdowns */
+  #primaryNav > li:hover > a {
+    background: rgba(0, 0, 0, 0.5);
+  }
+  #primaryNav li.parent > a:after {
+    font-size: 0.75rem;
+    content: "\25BC";
+    color: rgba(255, 255, 255, 0.5);
+    float: right;
+  }
+  #primaryNav li.parent > a:hover {
+    background: rgba(0, 0, 0, 0.75);
+  }
+  /*hide the sub menu items by default*/
+  #primaryNav li ul {
+    display: none;
+    background: rgba(0, 0, 0, 0.3);
+    padding: 0;
+  }
+  #primaryNav li ul a {
+    border-top: solid 1px rgba(0, 0, 0, 0.2);
+    font-size: 12px;
+    padding: 10px 5%;
+    font-weight: normal;
+  }
+  #primaryNav li:hover ul {
+    display: block;
+  }
+  .search {
+    position: absolute;
+    top: 0;
+    right: 1%;
+    padding-top: 2%;
+  }
+}
+/* End Mobile Styles */
 /*---------- slick slider ----------------------*/
 .myslider {
   width: 100%;
@@ -32,8 +288,65 @@ header .headerLimited .number {
 h2 {
   color: #a349a4;
   font-size: 2rem;
+  text-align: center;
 }
 /*---------- Articles ----------------------*/
+.sizeRestraint {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  border: green 2px solid;
+}
+.articleOn {
+  width: 25%;
+  border: blue 2px solid;
+  position: relative;
+  margin-bottom: 2%;
+}
 .articleOn img {
+  display: block;
+  opacity: 75%;
   width: 100%;
+}
+.articleOn img:hover {
+  opacity: 100%;
+}
+.articleOn span {
+  position: absolute;
+  display: block;
+  top: 0;
+  width: 100%;
+  color: #fff;
+  font-size: 1.5rem;
+  background-color: rgba(14, 12, 12, 0.5);
+  padding: 0.3rem 2%;
+  text-align: center;
+}
+@media (max-width: 500px) {
+  .articleOn {
+    width: 100%;
+  }
+}
+footer {
+  background-color: #a349a4;
+  color: #fff;
+  font-size: 1.5rem;
+}
+/*-----------------------Header------------------------------------------*/
+.headerLimited {
+  background-color: #f9f4f5;
+}
+.headerLimited header {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-content: flex-end;
+}
+.headerLimited header .number {
+  text-decoration: none;
+  color: #011502;
+  font-size: 2rem;
+  padding-top: 5%;
 }
