--- a/less/header.less
+++ b/less/header.less
@@ -1,9 +1,10 @@
 /*-----------------------Header------------------------------------------*/
-header{
+.headerLimited{
     background-color: @SecondaryColor;
   
-    .headerLimited{
+    header{
         max-width: 1200px;
+        margin: 0 auto;
     display:flex;
     justify-content: space-between;
     align-content: flex-end;
