--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,50 @@
 /*  apply a natural box layout model to all elements  */
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+/* Navigation for Large Screens  -------------------------------------------------------- */
+.navLimited{
+	background-color: @PrimaryColor;
+	
+}
+
+.navBar{
+	
+	display: flex;
+	justify-content: space-between;
+	align-content: center;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+nav{
+	border: yellow solid 4px;
+	width: 33.33%; 
+	ul{
+		display: flex;
+		justify-content: space-around;
+		padding: 1%;
+	}
+	li{
+		font-size: 1rem;
+		color: #fff;
+	}
+	a{
+		text-decoration: none;
+		color: #fff;
+	}
+}
+
+.search{
+	align-self: center;
+	margin-right: 0;
+}
+
+.button {
+	margin-left: 0;
+}
+
+
+
 #hamburgerBtn { display: none; } /* hide the navigation button by default */
 
 @media only screen and (max-width: 64rem) {
@@ -95,4 +139,15 @@
 		font-weight: normal;
 	}
 	#primaryNav li:hover ul {display: block;}
+
+
+
+	.search{
+		position: absolute;
+        top:0;
+		right: 1%;
+		padding-top: 2%;
+		
+
+	}
 } /* End Mobile Styles */
