--- a/css/main.css
+++ b/css/main.css
@@ -295,14 +295,14 @@ h2 {
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
+  justify-content: space-evenly;
+  padding-top: 2%;
+  padding-bottom: 2%;
   flex-wrap: wrap;
-  border: green 2px solid;
 }
 .articleOn {
-  width: 25%;
-  border: blue 2px solid;
+  width: 23%;
   position: relative;
-  margin-bottom: 2%;
 }
 .articleOn img {
   display: block;
@@ -312,7 +312,7 @@ h2 {
 .articleOn img:hover {
   opacity: 100%;
 }
-.articleOn span {
+.articleOn .top {
   position: absolute;
   display: block;
   top: 0;
@@ -323,9 +323,27 @@ h2 {
   padding: 0.3rem 2%;
   text-align: center;
 }
+.articleOn .bottom {
+  position: absolute;
+  display: block;
+  bottom: 0;
+  width: 100%;
+  color: #fff;
+  font-size: 1.5rem;
+  background-color: rgba(14, 12, 12, 0.5);
+  padding: 0.3rem 2%;
+  text-align: center;
+}
+@media (max-width: 800px) {
+  .articleOn {
+    width: 30%;
+    margin-bottom: 2%;
+  }
+}
 @media (max-width: 500px) {
   .articleOn {
-    width: 100%;
+    width: 45%;
+    margin-bottom: 2%;
   }
 }
 footer {
