--- a/less/landing.less
+++ b/less/landing.less
@@ -19,14 +19,19 @@
         max-width: 1200px;
         margin: 0 auto;
         display:flex;
+        justify-content: space-evenly;    
+        padding-top: 2%;
+        padding-bottom: 2%;
         flex-wrap: wrap;
-        border: green 2px solid;
+       
     }
+
+ 
     .articleOn{
-        width: 25%;
-        border: blue 2px solid;
+        width:23%;
         position:relative;
-        margin-bottom: 2%;
+       
+        
         
 
         img{
@@ -39,7 +44,7 @@
             opacity: 100%;
         }
 
-        span{
+        .top{
             position: absolute;
             display:block;
            top:0;
@@ -52,12 +57,32 @@
           
         }
 
+     .bottom{
+            position: absolute;
+            display:block;
+            bottom:0;
+            width: 100%;
+            color: #fff;
+            font-size: 1.5rem;
+            background-color: rgba(14, 12, 12, 0.5);
+            padding: .3rem 2%;
+            text-align: center;
+        }
+
    
 }//.articleOn
  
+@media @tablet{
+    .articleOn{
+        width: 30%;
+        margin-bottom: 2%;
+    }
+}
+
 @media @mobile {
     .articleOn{
-        width: 100%;
+        width: 45%;
+        margin-bottom: 2%;
     }
 }
 
