opacity on images

--- a/less/landing.less
+++ b/less/landing.less
@@ -36,12 +36,13 @@
 
         img{
             display: block;
-            opacity: 75%;
             width: 100%;
+            opacity: .7;
         }
 
-        img:hover{
-            opacity: 100%;
+   
+       img:hover{
+            opacity: 1;
         }
 
         .top{
