--- a/css/main.css
+++ b/css/main.css
@@ -306,11 +306,11 @@ h2 {
 }
 .articleOn img {
   display: block;
-  opacity: 75%;
   width: 100%;
+  opacity: 0.7;
 }
 .articleOn img:hover {
-  opacity: 100%;
+  opacity: 1;
 }
 .articleOn .top {
   position: absolute;
