footer worked on

--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,6 @@
 /*-----------------------Header------------------------------------------*/
 .headerLimited{
-    background-color: @SecondaryColor;
+    background-image: linear-gradient(#ffefd5,#ffae42, #fe5b35);
   
     header{
         max-width: 1200px;
@@ -8,11 +8,15 @@
     display:flex;
     justify-content: space-between;
     align-content: flex-end;
+.logo{
+    padding-left: 2%;
+}
+
     .number{
         text-decoration: none;
         color: @PrimaryColor;
         font-size: 2rem;
-        
+        padding-right: 2%;
         padding-top: 5%;
     }//a
 }//headerLimited
