--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,10 +20,11 @@
 	align-content: center;
 	max-width: 1200px;
 	margin: 0 auto;
+	padding: 1%;
 }
 
 nav{
-	border: yellow solid 4px;
+	
 	width: 33.33%; 
 	ul{
 		display: flex;
@@ -32,11 +33,12 @@ nav{
 	}
 	li{
 		font-size: 1rem;
-		color: #fff;
+	
 	}
 	a{
 		text-decoration: none;
 		color: #fff;
+	
 	}
 }
 
@@ -54,6 +56,8 @@ nav{
 #hamburgerBtn { display: none; } /* hide the navigation button by default */
 
 @media only screen and (max-width: 64rem) {
+
+	
 
 /* Navigation Button  -------------------------------------------------------- */
     body { padding-top: 50px; }
