--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,9 @@
 // variables
 @PrimaryColor:  #011502;
 @SecondaryColor: #f9f4f5	;
-@LtAccent: #ff5d73;
-@DkAccent: #a349a4;
+@LtAccent: #fe5b35;
+@DkAccent: #ffae42;
+
 @tablet: ~"(max-width: 800px)";
 @mobile: ~"(max-width: 500px)";
 @fontStack: @primaryFont;
