--- a/css/main.css
+++ b/css/main.css
@@ -151,9 +151,9 @@ table {
   align-content: center;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 1%;
 }
 nav {
-  border: yellow solid 4px;
   width: 33.33%;
 }
 nav ul {
@@ -163,7 +163,6 @@ nav ul {
 }
 nav li {
   font-size: 1rem;
-  color: #fff;
 }
 nav a {
   text-decoration: none;
@@ -286,7 +285,7 @@ nav a {
   width: 100%;
 }
 h2 {
-  color: #a349a4;
+  color: #ffae42;
   font-size: 2rem;
   text-align: center;
 }
@@ -346,14 +345,9 @@ h2 {
     margin-bottom: 2%;
   }
 }
-footer {
-  background-color: #a349a4;
-  color: #fff;
-  font-size: 1.5rem;
-}
 /*-----------------------Header------------------------------------------*/
 .headerLimited {
-  background-color: #f9f4f5;
+  background-image: linear-gradient(#ffefd5, #ffae42, #fe5b35);
 }
 .headerLimited header {
   max-width: 1200px;
@@ -362,9 +356,102 @@ footer {
   justify-content: space-between;
   align-content: flex-end;
 }
+.headerLimited header .logo {
+  padding-left: 2%;
+}
 .headerLimited header .number {
   text-decoration: none;
   color: #011502;
   font-size: 2rem;
+  padding-right: 2%;
   padding-top: 5%;
+}
+footer {
+  background-color: #ffae42;
+  color: #f9f4f5;
+  font-size: 1.5rem;
+}
+.footerWrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+h3 {
+  font-size: 1.5rem;
+  padding-bottom: 2%;
+}
+p {
+  font-size: 1rem;
+  padding-bottom: 3%;
+}
+.firstBlock {
+  width: 33%;
+  padding: 2%;
+}
+.secondBlock {
+  width: 33%;
+  padding: 2%;
+}
+.thirdBlock {
+  width: 33%;
+  padding: 2%;
+}
+/*-------------------- Tablet ---------------------*/
+@media (max-width: 800px) {
+  .firstBlock {
+    width: 48%;
+    margin-bottom: 2%;
+  }
+  .secondBlock {
+    width: 48%;
+    margin-bottom: 2%;
+  }
+  .thirdBlock {
+    width: 98%;
+    margin-bottom: 2%;
+  }
+}
+/*-------------------- Mobile ---------------------*/
+@media (max-width: 500px) {
+  .firstBlock {
+    width: 100%;
+    margin-bottom: 2%;
+  }
+  .secondBlock {
+    width: 100%;
+    margin-bottom: 2%;
+  }
+  .thirdBlock {
+    width: 100%;
+    margin-bottom: 2%;
+  }
+}
+.wrapperSocial {
+  background-color: #011502;
+}
+.socialMedia {
+  font-size: 3rem;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+.socialMedia i {
+  padding: 2%;
+}
+.socialMedia i:hover {
+  background-color: #fe5b35;
+  color: #011502;
+}
+.copyRight {
+  background-image: linear-gradient(#ffae42, #fe5b35);
+  text-align: center;
+  padding: 1%;
+}
+p {
+  font-size: 1rem;
+  color: #f9f4f5;
 }
