--- a/less/footer.less
+++ b/less/footer.less
@@ -20,7 +20,7 @@ h3{
 
 p{
     font-size: 1rem;
-    padding-bottom: 3%;
+    padding-bottom: 2%;
 }
 
 
@@ -49,6 +49,22 @@ p{
     .secondBlock{
         width: 48%;
         margin-bottom: 2%;
+
+        .newsLetterForm{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+
+            .emailAddress{
+                width: 100%;
+            }
+            .submitButton{
+                border-radius: 25px;
+            }
+        }
+
+
+
     }
 
     .thirdBlock{
@@ -106,10 +122,11 @@ p{
     background-image: linear-gradient(#ffae42, #fe5b35);
     text-align: center;
     padding: 1%;
+
+   
 }
 
-p{
+h5{
     font-size: 1rem;
-    color:#f9f4f5;
-    
+
 }
