--- a/css/main.css
+++ b/css/main.css
@@ -245,7 +245,7 @@ nav ul li ul li a {
     font-weight: normal;
   }
   #primaryNav li.active a {
-    background-color: rgba(0, 0, 0, 0.25);
+    color: #fe5b35;
   }
   #primaryNav li a {
     display: block;
@@ -258,7 +258,7 @@ nav ul li ul li a {
     border-top: 1px solid rgba(0, 0, 0, 0.2);
   }
   #primaryNav li a:hover {
-    background-color: rgba(0, 0, 0, 0.5);
+    color: #ffae42;
   }
   /* Toggle the navigation bar to expand down  */
   #primaryNav.open {
@@ -266,7 +266,7 @@ nav ul li ul li a {
   }
   /* Submenus – optional .parent class indicates dropdowns */
   #primaryNav > li:hover > a {
-    background: rgba(0, 0, 0, 0.5);
+    color: #ffae42;
   }
   #primaryNav li.parent > a:after {
     font-size: 0.75rem;
@@ -275,13 +275,13 @@ nav ul li ul li a {
     float: right;
   }
   #primaryNav li.parent > a:hover {
-    background: rgba(0, 0, 0, 0.75);
+    color: #ffae42;
   }
   /*hide the sub menu items by default*/
   #primaryNav li ul {
     display: none;
-    background: rgba(0, 0, 0, 0.3);
-    padding: 0;
+    background: #011502;
+    padding-left: 1%;
   }
   #primaryNav li ul a {
     border-top: solid 1px rgba(0, 0, 0, 0.2);
@@ -304,18 +304,27 @@ nav ul li ul li a {
 /*------------Search Bar ------------------------------------------*/
 .searchBox {
   align-self: center;
+  margin-right: 4%;
 }
 .searchBox input[type=text] {
   padding: 6px;
   font-size: 1rem;
   border: none;
+  margin-right: -4px;
+  width: 80px;
+  border-radius: 5px 0 0 5px;
+}
+.searchBox input[type=text]:focus {
+  width: 150px;
 }
 .searchBox button {
+  border-radius: 0 5px 5px 0;
   background-color: #f9f4f5;
   padding: 6px 10px;
   font-size: 1rem;
   border: none;
   cursor: pointer;
+  margin: 0;
 }
 .searchBox button:hover {
   background-color: #ffae42;
@@ -408,11 +417,19 @@ h2 {
   font-size: 2rem;
   padding-right: 2%;
   padding-top: 5%;
+  padding-bottom: 1%;
 }
 footer {
   background-color: #ffae42;
-  color: #f9f4f5;
+  color: #011502;
   font-size: 1.5rem;
+}
+footer a {
+  text-decoration: none;
+  color: #011502;
+}
+footer a:hover {
+  font-weight: bold;
 }
 .footerWrapper {
   max-width: 1200px;
@@ -437,6 +454,44 @@ p {
   width: 33%;
   padding: 2%;
 }
+.newsLetterForm {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.newsLetterForm .emailAddress {
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  font-size: 1.5rem;
+  background-color: #f9f4f5;
+  color: #011502;
+  margin-top: 5%;
+  text-align: center;
+  padding: 2%;
+}
+.newsLetterForm .submitButton {
+  border-radius: 15px;
+  width: 100%;
+  font-size: 1.5rem;
+  background-color: #f9f4f5;
+  color: #011502;
+  font-weight: bold;
+  margin-top: 5%;
+  padding: 2%;
+  border: none;
+}
+.newsLetterForm .submitButton:hover {
+  background-color: #fe5b35;
+}
+h3 {
+  font-size: 2rem;
+  font-weight: bold;
+  padding-bottom: 4%;
+}
+p {
+  padding-bottom: 6%;
+}
 .thirdBlock {
   width: 33%;
   padding: 2%;
@@ -450,17 +505,6 @@ p {
   .secondBlock {
     width: 48%;
     margin-bottom: 2%;
-  }
-  .secondBlock .newsLetterForm {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  .secondBlock .newsLetterForm .emailAddress {
-    width: 100%;
-  }
-  .secondBlock .newsLetterForm .submitButton {
-    border-radius: 25px;
   }
   .thirdBlock {
     width: 98%;
@@ -492,6 +536,7 @@ p {
   margin: 0 auto;
   display: flex;
   justify-content: space-evenly;
+  color: #f9f4f5;
 }
 .socialMedia i {
   padding: 2%;
