--- a/less/header.less
+++ b/less/header.less
@@ -18,6 +18,7 @@
         font-size: 2rem;
         padding-right: 2%;
         padding-top: 5%;
+        padding-bottom: 1%;
     }//a
 }//headerLimited
 }//header
