search bar bug fixed

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -177,13 +177,21 @@ nav{
 	.search{
 		position: absolute;
         top:0;
-		right: 1%;
-		padding-top: 2%;
+		right: 2%;
+		align-self: center;
 		background-color: @PrimaryColor;
 
 	}
 } /* End Mobile Styles */
 
+@media @tablet{
+	.search{
+		position: absolute;
+		top: 0;
+		right: 2%;
+		padding-top: 1%;
+	}
+}
 /*------------Search Bar ------------------------------------------*/
 .searchBox{
 	align-self: center;
