--- a/less/variables.less
+++ b/less/variables.less
@@ -4,8 +4,8 @@
 @LtAccent: #fe5b35;
 @DkAccent: #ffae42;
 
-@tablet: ~"(max-width: 800px)";
-@mobile: ~"(max-width: 500px)";
+@tablet: ~"(max-width:  64rem)";
+@mobile: ~"(max-width: 32rem)";
 @fontStack: @primaryFont;
 @primaryFont:'Lora', serif;
 
