--- a/css/main.css
+++ b/css/main.css
@@ -295,12 +295,20 @@ nav ul li ul li a {
   .search {
     position: absolute;
     top: 0;
-    right: 1%;
-    padding-top: 2%;
+    right: 2%;
+    align-self: center;
     background-color: #011502;
   }
 }
 /* End Mobile Styles */
+@media (max-width:  64rem) {
+  .search {
+    position: absolute;
+    top: 0;
+    right: 2%;
+    padding-top: 1%;
+  }
+}
 /*------------Search Bar ------------------------------------------*/
 .searchBox {
   align-self: center;
@@ -385,13 +393,13 @@ h2 {
   padding: 0.3rem 2%;
   text-align: center;
 }
-@media (max-width: 800px) {
+@media (max-width:  64rem) {
   .articleOn {
     width: 30%;
     margin-bottom: 2%;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 32rem) {
   .articleOn {
     width: 45%;
     margin-bottom: 2%;
@@ -414,10 +422,14 @@ h2 {
 .headerLimited header .number {
   text-decoration: none;
   color: #011502;
-  font-size: 2rem;
+  font-size: 1rem;
+  font-weight: bold;
   padding-right: 2%;
   padding-top: 5%;
   padding-bottom: 1%;
+}
+@media (max-width: 32rem) {
+  width: 50%;
 }
 footer {
   background-color: #ffae42;
@@ -440,11 +452,9 @@ footer a:hover {
 }
 h3 {
   font-size: 1.5rem;
-  padding-bottom: 2%;
 }
 p {
   font-size: 1rem;
-  padding-bottom: 2%;
 }
 .firstBlock {
   width: 33%;
@@ -497,7 +507,7 @@ p {
   padding: 2%;
 }
 /*-------------------- Tablet ---------------------*/
-@media (max-width: 800px) {
+@media (max-width:  64rem) {
   .firstBlock {
     width: 48%;
     margin-bottom: 2%;
@@ -512,7 +522,7 @@ p {
   }
 }
 /*-------------------- Mobile ---------------------*/
-@media (max-width: 500px) {
+@media (max-width: 32rem) {
   .firstBlock {
     width: 100%;
     margin-bottom: 2%;
