--- a/less/header.less
+++ b/less/header.less
@@ -15,10 +15,15 @@
     .number{
         text-decoration: none;
         color: @PrimaryColor;
-        font-size: 2rem;
+        font-size: 1rem;
+        font-weight: bold;
         padding-right: 2%;
         padding-top: 5%;
         padding-bottom: 1%;
     }//a
 }//headerLimited
 }//header
+
+@media @mobile{
+    width: 50%;
+}
