--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,7 +14,7 @@
 	background-color: @PrimaryColor;
 	display: flex;
 	justify-content: space-between;
-	align-content: center;
+	align-items: center;
 	margin: 0 auto;
 
 }
