--- a/less/header.less
+++ b/less/header.less
@@ -7,8 +7,9 @@
         margin: 0 auto;
     display:flex;
     justify-content: space-between;
-    align-content: flex-end;
+    align-items: center;
 .logo{
+   
     padding-left: 2%;
 }
 
