--- a/less/footer.less
+++ b/less/footer.less
@@ -48,9 +48,10 @@ p{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding: 2%;
 
     .emailAddress{
-        width: 100%;
+        width: 80%;
         border-radius: 5px;
         border: none;
         font-size: 1.5rem;
@@ -62,7 +63,7 @@ p{
     }
     .submitButton{
         border-radius: 15px;
-        width: 100%;
+        width: 80%;
         font-size: 1.5rem;
         background-color: @SecondaryColor;
         color: @PrimaryColor;
