text typo corrected

--- a/less/header.less
+++ b/less/header.less
@@ -16,7 +16,7 @@
     .number{
         text-decoration: none;
         color: @PrimaryColor;
-        font-size: 1rem;
+        font-size: 2rem;
         font-weight: bold;
         padding-right: 2%;
         padding-top: 5%;
@@ -26,5 +26,7 @@
 }//header
 
 @media @mobile{
-    width: 50%;
+    .number{
+        font-size: 1rem;
+}
 }
