--- a/less/landing.less
+++ b/less/landing.less
@@ -48,7 +48,7 @@
         .top{
             position: absolute;
             display:block;
-           top:0;
+            top:0;
             width: 100%;
             color: #fff;
             font-size: 1.5rem;
@@ -66,7 +66,7 @@
             color: #fff;
             font-size: 1.5rem;
             background-color: rgba(14, 12, 12, 0.5);
-            padding: .3rem 2%;
+            padding: 0.3rem 2%;
             text-align: center;
         }
 
