Navigation worked on

--- a/less/main.less
+++ b/less/main.less
@@ -1,9 +1,9 @@
 //imports
 @import "reset.less";
 @import "variables.less";
-@import "navigation.less";
+
 @import "landing.less";
 @import "header.less";
 @import "footer.less";
 
-
+@import "nav.less";
