--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,5 @@
 // variables
-@PrimaryColor:  #011502;
+@PrimaryColor:  #36454f;
 @SecondaryColor: #f9f4f5;
 @LtAccent: #fe5b35;
 @DkAccent: #ffae42;
