--- a/css/main.css
+++ b/css/main.css
@@ -131,221 +131,6 @@ table {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-/*Change the menubar color on line 23 */
-/*Change the dropdown menu color on line 49*/
-/*If you have a light background color then change the background image on lines 30 and 37 to load menuOpenBlack and menuCloseBlack*/
-/*Adjust the media query max-width value on line 12 to match your breakpoint between the small and medium screens OR between the medium and large screens*/
-/*  apply a natural box layout model to all elements  */
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-#hamburgerBtn {
-  display: none;
-}
-/* hide the navigation button by default */
-@media only screen and (max-width: 64rem) {
-  /* Navigation Button  -------------------------------------------------------- */
-  body {
-    padding-top: 50px;
-  }
-  .navBar {
-    flex-direction: column;
-  }
-  ul {
-    flex-direction: column;
-  }
-  nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 2.75rem;
-    background-color: #011502;
-    /* change the menu color */
-  }
-  #hamburgerBtn {
-    display: block;
-    width: 7rem;
-    height: 2.75rem;
-    background-image: url('../images/menuOpenWhite.png');
-    background-color: rgba(0, 0, 0, 0.1);
-    background-position: 2vw center;
-    background-repeat: no-repeat;
-    border: 0 none;
-  }
-  #hamburgerBtn.open {
-    background: url('../images/menuCloseWhite.png');
-    background-position: 2vw center;
-    background-repeat: no-repeat;
-  }
-  /* Navigation Bar -------------------------------------------------------- */
-  #primaryNav {
-    height: 0;
-    overflow: hidden;
-    width: 20rem;
-    background-color: #011502;
-    /* change the menu color */
-    margin: 0;
-    padding: 0;
-    z-index: 998;
-    font-family: Verdana;
-    font-weight: normal;
-  }
-  #primaryNav li.active a {
-    color: #fe5b35;
-  }
-  #primaryNav li a {
-    display: block;
-    width: 100%;
-    padding: 0.75rem 2vw;
-    font-size: 14px;
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.15);
-    color: white;
-    text-decoration: none;
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-  }
-  #primaryNav li a:hover {
-    color: #ffae42;
-  }
-  /* Toggle the navigation bar to expand down  */
-  #primaryNav.open {
-    height: auto;
-  }
-  /* Submenus – optional .parent class indicates dropdowns */
-  #primaryNav > li:hover > a {
-    color: #ffae42;
-  }
-  #primaryNav li.parent > a:after {
-    font-size: 0.75rem;
-    content: "\25BC";
-    color: rgba(255, 255, 255, 0.5);
-    float: right;
-  }
-  #primaryNav li.parent > a:hover {
-    color: #ffae42;
-  }
-  /*hide the sub menu items by default*/
-  #primaryNav li ul {
-    display: none;
-    background: #011502;
-    padding-left: 1%;
-  }
-  #primaryNav li ul a {
-    border-top: solid 1px rgba(0, 0, 0, 0.2);
-    font-size: 12px;
-    padding: 10px 5%;
-    font-weight: normal;
-  }
-  #primaryNav li:hover ul {
-    display: block;
-  }
-  .search {
-    position: absolute;
-    top: 0;
-    right: 2%;
-    align-self: center;
-    background-color: #011502;
-  }
-}
-/* End Mobile Styles */
-@media (max-width:  64rem) {
-  .search {
-    position: absolute;
-    top: 0;
-    right: 2%;
-    padding-top: 1%;
-  }
-}
-/*------------Search Bar ------------------------------------------*/
-.searchBox {
-  align-self: center;
-  margin-right: 4%;
-}
-.searchBox input[type=text] {
-  padding: 6px;
-  font-size: 1rem;
-  border: none;
-  margin-right: -4px;
-  width: 80px;
-  border-radius: 5px 0 0 5px;
-}
-.searchBox input[type=text]:focus {
-  width: 150px;
-}
-.searchBox button {
-  border-radius: 0 5px 5px 0;
-  background-color: #f9f4f5;
-  padding: 6px 10px;
-  font-size: 1rem;
-  border: none;
-  cursor: pointer;
-  margin: 0;
-}
-.searchBox button:hover {
-  background-color: #ffae42;
-}
-/* Navigation for Large Screens  -------------------------------------------------------- */
-.navBackground {
-  background-color: #011502;
-}
-.navBar {
-  background-color: #011502;
-  max-width: 1200px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
-}
-nav {
-  position: relative;
-}
-nav button {
-  display: none;
-}
-nav ul {
-  display: flex;
-  justify-content: space-around;
-  padding: 4%;
-  margin-left: 2%;
-}
-nav li {
-  font-size: 1.2rem;
-}
-nav a {
-  text-decoration: none;
-  color: #fff;
-  padding-left: 2rem;
-}
-nav ul li.active a {
-  color: #fe5b35;
-}
-nav ul li a:hover {
-  color: #ffae42;
-}
-nav ul li ul {
-  display: flex;
-  flex-direction: column;
-  left: -999em;
-  z-index: 99;
-  background-color: #011502;
-  position: absolute;
-  margin-left: 4%;
-  margin-top: 0.2%;
-}
-nav ul li:hover ul {
-  left: auto;
-}
-nav ul li ul li {
-  width: 100%;
-  margin: 6%;
-  padding-bottom: 2%;
-  padding-right: 0.5rem;
-}
-nav ul li ul li a {
-  padding-left: 0;
-}
 /*---------- slick slider ----------------------*/
 .myslider {
   width: 100%;
@@ -430,7 +215,7 @@ h2 {
 }
 .headerLimited header .number {
   text-decoration: none;
-  color: #011502;
+  color: #36454f;
   font-size: 2rem;
   font-weight: bold;
   padding-right: 2%;
@@ -438,18 +223,21 @@ h2 {
   padding-bottom: 1%;
 }
 @media (max-width: 32rem) {
+  .headerLimited {
+    margin-top: 45px;
+  }
   .number {
     font-size: 1rem;
   }
 }
 footer {
   background-color: #ffae42;
-  color: #011502;
+  color: #36454f;
   font-size: 1.5rem;
 }
 footer a {
   text-decoration: none;
-  color: #011502;
+  color: #36454f;
 }
 footer a:hover {
   font-weight: bold;
@@ -487,7 +275,7 @@ p {
   border: none;
   font-size: 1.5rem;
   background-color: #f9f4f5;
-  color: #011502;
+  color: #36454f;
   margin-top: 5%;
   text-align: center;
   padding: 2%;
@@ -497,7 +285,7 @@ p {
   width: 80%;
   font-size: 1.5rem;
   background-color: #f9f4f5;
-  color: #011502;
+  color: #36454f;
   font-weight: bold;
   margin-top: 5%;
   padding: 2%;
@@ -549,7 +337,7 @@ p {
   }
 }
 .wrapperSocial {
-  background-color: #011502;
+  background-color: #36454f;
 }
 .socialMedia {
   font-size: 3rem;
@@ -565,7 +353,7 @@ p {
 }
 .socialMedia i:hover {
   background-color: #fe5b35;
-  color: #011502;
+  color: #36454f;
 }
 .copyRight {
   background-image: linear-gradient(#ffae42, #fe5b35);
@@ -574,4 +362,205 @@ p {
 }
 h5 {
   font-size: 1rem;
+}
+/*  apply a natural box layout model to all elements  */
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#hamburgerBtn {
+  display: none;
+}
+@media only screen and (max-width: 35rem) {
+  /*Navigation Button ----------------------------------------------------------*/
+  .navBackground {
+    background-color: #36454f;
+  }
+  .navBar {
+    position: absolute;
+    top: 0;
+    background-color: #36454f;
+  }
+  nav {
+    width: 60%;
+    background-color: #36454f;
+    z-index: 1;
+  }
+  #hamburgerBtn {
+    display: block;
+    width: 7rem;
+    height: 2.75rem;
+    background-image: url(../images/menuOpenWhite.png);
+    background-color: rgba(0, 0, 0, 0.1);
+    background-position: 2vw center;
+    background-repeat: no-repeat;
+    border: 0 none;
+  }
+  #hamburgerBtn.open {
+    background-image: url(../images/menuCloseWhite.png);
+    background-position: 2vw center;
+    background-repeat: no-repeat;
+  }
+  /* Navigation Bar -------------------------------------------------------------*/
+  ul {
+    flex-direction: column;
+  }
+  #primaryNav {
+    height: 0;
+    overflow: hidden;
+    width: 20rem;
+    background-color: #36454f;
+    margin: 0;
+    padding: 0;
+    z-index: 998;
+    font-weight: normal;
+  }
+  #primaryNav li.active a {
+    background-color: #0d1012;
+  }
+  #primaryNav li a {
+    display: block;
+    width: 100%;
+    padding: 0.75rem 2vw;
+    font-size: 14px;
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.15);
+    color: white;
+    text-decoration: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+  }
+  #primaryNav li a:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  /* Toggle the navigation bar to expand down */
+  #primaryNav.open {
+    height: auto;
+  }
+  /* Submenus --------------------------------------*/
+  #primaryNav > li:hover > a {
+    background: rgba(0, 0, 0, 0.5);
+  }
+  #primaryNav li.parent > a:after {
+    font-size: 0.75rem;
+    content: "\25BC";
+    color: rgba(255, 255, 255, 0.5);
+    float: right;
+  }
+  #primaryNav li.parent > a:hover {
+    background: rgba(0, 0, 0, 0.75);
+  }
+  /* Hide the sub menu items by default ---------------------*/
+  #primaryNav li ul {
+    display: none;
+    background: rgba(0, 0, 0, 0.3);
+    padding: 0;
+  }
+  #primaryNav li ul a {
+    border-top: solid 1px rgba(0, 0, 0, 0.2);
+    font-size: 12px;
+    padding: 10px 5%;
+    font-weight: normal;
+  }
+  #primaryNav li:hover ul {
+    display: block;
+  }
+}
+/*------------Search Bar ------------------------------------------*/
+.searchBox {
+  background-color: #36454f;
+  align-self: center;
+}
+.searchBox input[type=text] {
+  padding: 6px;
+  font-size: 1rem;
+  border: none;
+  margin-right: -4px;
+  width: 80px;
+  border-radius: 5px 0 0 5px;
+}
+.searchBox input[type=text]:focus {
+  width: 150px;
+}
+.searchBox button {
+  border-radius: 0 5px 5px 0;
+  background-color: #f9f4f5;
+  padding: 6px 10px;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+}
+.searchBox button:hover {
+  background-color: #ffae42;
+}
+@media (max-width: 32rem) {
+  .search {
+    width: 100%;
+    padding-right: 1%;
+  }
+}
+/* Navigation for Large Screens  -------------------------------------------------------- */
+.navBackground {
+  background-color: #36454f;
+}
+.navBar {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+}
+nav {
+  width: 50%;
+  background-color: #36454f;
+}
+nav ul li.active a {
+  color: #fe5b35;
+}
+nav ul {
+  margin-left: 2%;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  display: flex;
+}
+nav ul li a {
+  display: block;
+  border: none;
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+  background: none;
+  font-size: 0.9rem;
+  padding: 0.7rem 0.9rem;
+  color: #ffffff;
+  text-decoration: none;
+  -webkit-transition: background 0.3s linear;
+  transition: background 0.3s linear;
+}
+nav ul li a:hover {
+  background: #2c3840;
+  color: #ffae42;
+}
+nav ul li ul {
+  /* rules for sub menu items*/
+  z-index: 99;
+  position: absolute;
+  background-color: #212b31;
+  left: -999em;
+  /*pushes the menu way off to the side */
+  width: 10em;
+  display: flex;
+  flex-direction: column;
+}
+nav ul li ul li {
+  /*overides the float and line from the parent ul*/
+  float: none;
+  border-right: none;
+  border-top: solid 1px rgba(0, 0, 0, 0.2);
+}
+nav ul li:hover ul {
+  /*this displays the menus as drop downs */
+  left: auto;
+  margin-left: 0;
+}
+/* Clearfix: force and Element not to collapse --------*/
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
