--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,164 +1,6 @@
-/*Change the menubar color on line 23 */
-/*Change the dropdown menu color on line 49*/
-/*If you have a light background color then change the background image on lines 30 and 37 to load menuOpenBlack and menuCloseBlack*/
-/*Adjust the media query max-width value on line 12 to match your breakpoint between the small and medium screens OR between the medium and large screens*/
-
 
 /*  apply a natural box layout model to all elements  */
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
-
-
-
-#hamburgerBtn { display: none; } /* hide the navigation button by default */
-
-@media only screen and (max-width: 64rem) {
-
-
-	
-	/* Navigation Button  -------------------------------------------------------- */
-    body { padding-top: 50px; }
-	.navBar{
-		flex-direction: column;
-	}
-
-	ul{
-		flex-direction: column;
-	}
-	
-    nav {
-        position: absolute;
-        top:0;
-        left: 0;
-        width: 100%;
-        height: 2.75rem;
-        background-color: @PrimaryColor; /* change the menu color */
-    }
-
-	#hamburgerBtn {
-		display: block;
-		width: 7rem;
-        height: 2.75rem;
-		background-image: url('../images/menuOpenWhite.png');
-		background-color: rgba(0,0,0,0.1);
-		background-position: 2vw center;
-		background-repeat: no-repeat;
-		border: 0 none;
-	}
-	#hamburgerBtn.open {
-		background: url('../images/menuCloseWhite.png');
-        background-position: 2vw center;
-		background-repeat: no-repeat;
-	}
-
-/* Navigation Bar -------------------------------------------------------- */
-
-	
-	#primaryNav {
-        height: 0;
-        overflow: hidden;
-		width: 20rem;
-		background-color: @PrimaryColor;/* change the menu color */
-		margin: 0;
-		padding: 0;
-		z-index: 998;
-        font-family: Verdana;
-        font-weight: normal;
-	}
-	#primaryNav li.active a{color: @LtAccent;}
-	#primaryNav li a {
-		display: block;
-		width: 100%;
-		padding: .75rem 2vw;
-		font-size: 14px;
-		text-shadow: -1px -1px 0 rgba(0,0,0,.15);
-		color: white;
-		text-decoration: none;
-		border-top: 1px solid rgba(0,0,0,.2);
-	}
-	#primaryNav li a:hover {
-		color: @DkAccent;
-	}
-
-	/* Toggle the navigation bar to expand down  */
-	#primaryNav.open {height: auto;}
-
-	/* Submenus – optional .parent class indicates dropdowns */
-	#primaryNav > li:hover > a {color: @DkAccent;}
-	#primaryNav li.parent > a:after {
-        font-size: .75rem;
-		content: "\25BC";
-		color: rgba(255,255,255,.5);
-		float: right;
-	}
-	#primaryNav li.parent > a:hover {color: @DkAccent;}
-    /*hide the sub menu items by default*/
-	#primaryNav li ul {
-		display: none;
-		background: @PrimaryColor;
-		padding-left: 1%;
-	}
-	#primaryNav li ul a {
-		border-top: solid 1px rgba(0,0,0,0.2);
-		font-size: 12px;
-		padding: 10px 5%;
-		font-weight: normal;
-	}
-	#primaryNav li:hover ul {display: block;}
-
-
-
-	.search{
-		position: absolute;
-        top:0;
-		right: 2%;
-		align-self: center;
-		background-color: @PrimaryColor;
-
-	}
-} /* End Mobile Styles */
-
-@media @tablet{
-	.search{
-		position: absolute;
-		top: 0;
-		right: 2%;
-		padding-top: 1%;
-	}
-}
-/*------------Search Bar ------------------------------------------*/
-.searchBox{
-	align-self: center;
-	margin-right: 4%;
-	input[type=text] {
-		padding: 6px;
-		font-size: 1rem;
-		border: none;
-		margin-right: -4px;
-		width: 80px;
-		border-radius: 5px 0 0 5px;
-	}
-
-	input[type=text]:focus{
-		width: 150px;
-	}
-
-	button{
-		border-radius: 0 5px 5px 0;
-		background-color: @SecondaryColor;
-		padding: 6px 10px;
-		font-size: 1rem;
-		border: none;
-		cursor: pointer;
-		margin: 0;
-	}//button
-
-	button:hover{
-		background-color:@DkAccent;
-
-	
-	}
-}//searchBox
-
 /* Navigation for Large Screens  -------------------------------------------------------- */
 .navBackground{
 	background-color: @PrimaryColor;
@@ -167,22 +9,20 @@
 .navBar{
 	background-color: @PrimaryColor;
 	max-width: 1200px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 	margin: 0 auto;
+	display:flex;
+	justify-content: space-between;
 
 }
 
 nav{
-	
+	display:flex;
 	position: relative;
 	button {display:none;}
 	
 
 	ul{
-		display: flex;
-		justify-content: space-around;
+	float: left;
 		padding: 4%;
 		margin-left: 2%;
 	}
@@ -237,3 +77,151 @@ nav{
 
 
 }//end nav
+
+
+/*Change the menubar color on line 23 */
+/*Change the dropdown menu color on line 49*/
+/*If you have a light background color then change the background image on lines 30 and 37 to load menuOpenBlack and menuCloseBlack*/
+/*Adjust the media query max-width value on line 12 to match your breakpoint between the small and medium screens OR between the medium and large screens*/
+
+
+/*  apply a natural box layout model to all elements  */
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+#hamburgerBtn { display: none; } /* hide the navigation button by default */
+
+@media only screen and (max-width: 64rem) {
+
+/* Navigation Button  -------------------------------------------------------- */
+    body { padding-top: 50px; }
+    
+    nav {
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 2.75rem;
+		background-color: #ba3659; /* change the menu color */
+		z-index: 1;
+    }
+
+	#hamburgerBtn {
+		display: block;
+		width: 7rem;
+        height: 2.75rem;
+		background-image: url('../images/menuOpenWhite.png');
+		background-color: rgba(0,0,0,0.1);
+		background-position: 2vw center;
+		background-repeat: no-repeat;
+		border: 0 none;
+	}
+	#hamburgerBtn.open {
+		background: url('../images/menuCloseWhite.png');
+        background-position: 2vw center;
+		background-repeat: no-repeat;
+	}
+
+/* Navigation Bar -------------------------------------------------------- */
+
+	
+	#primaryNav {
+        height: 0;
+        overflow: hidden;
+		width: 20rem;
+		background-color: #ba3659; /* change the menu color */
+		margin: 0;
+		padding: 0;
+		z-index: 998;
+        font-family: Verdana;
+        font-weight: normal;
+	}
+    #primaryNav li.active a{background-color: rgba(0,0,0,0.25);}
+	#primaryNav li a {
+		display: block;
+		width: 100%;
+		padding: .75rem 2vw;
+		font-size: 14px;
+		text-shadow: -1px -1px 0 rgba(0,0,0,.15);
+		color: white;
+		text-decoration: none;
+		border-top: 1px solid rgba(0,0,0,.2);
+	}
+	#primaryNav li a:hover {
+		background-color: rgba(0,0,0,.5);
+	}
+
+	/* Toggle the navigation bar to expand down  */
+	#primaryNav.open {height: auto;}
+
+	/* Submenus – optional .parent class indicates dropdowns */
+	#primaryNav > li:hover > a {background: rgba(0,0,0,.5);}
+	#primaryNav li.parent > a:after {
+        font-size: .75rem;
+		content: "\25BC";
+		color: rgba(255,255,255,.5);
+		float: right;
+	}
+	#primaryNav li.parent > a:hover {
+		background: rgba(0,0,0,.75);
+	}
+    /*hide the sub menu items by default*/
+	#primaryNav li ul {
+		display: none;
+		background: rgba(0,0,0,.3);
+		padding: 0;
+	}
+	#primaryNav li ul a {
+		border-top: solid 1px rgba(0,0,0,0.2);
+		font-size: 12px;
+		padding: 10px 5%;
+		font-weight: normal;
+	}
+	#primaryNav li:hover ul {display: block;}
+} /* End Mobile Styles */
+
+@media @tablet{
+	.search{
+		position: absolute;
+		top: 0;
+		right: 2%;
+		padding-top: 1%;
+	}
+}
+/*------------Search Bar ------------------------------------------*/
+.searchBox{
+	float: right;
+	margin-right: 4%;
+	input[type=text] {
+		padding: 6px;
+		font-size: 1rem;
+		border: none;
+		margin-right: -4px;
+		width: 80px;
+		border-radius: 5px 0 0 5px;
+	}
+
+	input[type=text]:focus{
+		width: 150px;
+	}
+
+	button{
+		border-radius: 0 5px 5px 0;
+		background-color: @SecondaryColor;
+		padding: 6px 10px;
+		font-size: 1rem;
+		border: none;
+		cursor: pointer;
+		margin: 0;
+	}//button
+
+	button:hover{
+		background-color:@DkAccent;
+
+	
+	}
+}//searchBox
+
+
+.clearfix {
+	overflow: auto;
+  }
