navigation submenu bug fixed

--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,7 @@
 /*-----------------------Header------------------------------------------*/
 .headerLimited{
     background-image: linear-gradient(#ffefd5,#ffae42, #fe5b35);
+    width: 100%;
   
     header{
         max-width: 1200px;
@@ -28,7 +29,7 @@
 @media @mobile{
 
     .headerLimited{
-      margin-top: 45px;
+      margin-top: 60px;
     }
     .number{
         font-size: 1rem;
