--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,7 @@ h2 {
 /*-----------------------Header------------------------------------------*/
 .headerLimited {
   background-image: linear-gradient(#ffefd5, #ffae42, #fe5b35);
+  width: 100%;
 }
 .headerLimited header {
   max-width: 1200px;
@@ -224,7 +225,7 @@ h2 {
 }
 @media (max-width: 32rem) {
   .headerLimited {
-    margin-top: 45px;
+    margin-top: 60px;
   }
   .number {
     font-size: 1rem;
@@ -369,21 +370,114 @@ h5 {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+/*------------Search Bar ------------------------------------------*/
+.searchBox {
+  background-color: #36454f;
+  align-self: center;
+}
+.searchBox input[type=text] {
+  padding: 6px;
+  font-size: 1rem;
+  border: none;
+  margin-right: -4px;
+  width: 80px;
+  border-radius: 5px 0 0 5px;
+}
+.searchBox input[type=text]:focus {
+  width: 80%;
+}
+.searchBox button {
+  border-radius: 0 5px 5px 0;
+  background-color: #f9f4f5;
+  padding: 6px 10px;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+  margin-right: 16px;
+}
+.searchBox button:hover {
+  background-color: #ffae42;
+}
+/* Navigation for Large Screens  -------------------------------------------------------- */
+.navBackground {
+  background-color: #36454f;
+}
+.navBar {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+nav {
+  width: 50%;
+  background-color: #36454f;
+}
+nav ul li.active a {
+  color: #fe5b35;
+}
+nav ul {
+  margin-left: 2%;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  display: flex;
+}
+nav ul li a {
+  display: block;
+  border: none;
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+  background: none;
+  font-size: 0.9rem;
+  padding: 0.7rem 0.9rem;
+  color: #ffffff;
+  text-decoration: none;
+  -webkit-transition: background 0.3s linear;
+  transition: background 0.3s linear;
+}
+nav ul li a:hover {
+  background: #2c3840;
+  color: #ffae42;
+}
+nav ul li ul {
+  /* rules for sub menu items*/
+  z-index: 99;
+  position: absolute;
+  background-color: #212b31;
+  left: -999em;
+  /*pushes the menu way off to the side */
+  width: 10em;
+  display: flex;
+  flex-direction: column;
+}
+nav ul li ul li {
+  /*overides the float and line from the parent ul*/
+  border-right: none;
+  border-top: solid 1px rgba(0, 0, 0, 0.2);
+}
+nav ul li:hover ul {
+  /*this displays the menus as drop downs */
+  left: auto;
+  margin-left: 0;
+}
 #hamburgerBtn {
   display: none;
 }
-@media only screen and (max-width: 35rem) {
+@media only screen and (max-width: 32rem) {
   /*Navigation Button ----------------------------------------------------------*/
   .navBackground {
     background-color: #36454f;
+    width: 100%;
   }
   .navBar {
     position: absolute;
     top: 0;
     background-color: #36454f;
+    display: flex;
+    justify-content: space-evenly;
+    border: purple 4px solid;
   }
   nav {
-    width: 60%;
+    border: green 4px solid;
+    width: 40%;
     background-color: #36454f;
     z-index: 1;
   }
@@ -463,100 +557,19 @@ h5 {
   }
   #primaryNav li:hover ul {
     display: block;
+    position: relative;
   }
-}
-/*------------Search Bar ------------------------------------------*/
-.searchBox {
-  background-color: #36454f;
-  align-self: center;
-}
-.searchBox input[type=text] {
-  padding: 6px;
-  font-size: 1rem;
-  border: none;
-  margin-right: -4px;
-  width: 80px;
-  border-radius: 5px 0 0 5px;
-}
-.searchBox input[type=text]:focus {
-  width: 150px;
-}
-.searchBox button {
-  border-radius: 0 5px 5px 0;
-  background-color: #f9f4f5;
-  padding: 6px 10px;
-  font-size: 1rem;
-  border: none;
-  cursor: pointer;
-  margin: 0;
-}
-.searchBox button:hover {
-  background-color: #ffae42;
-}
-@media (max-width: 32rem) {
-  .search {
-    width: 100%;
-    padding-right: 1%;
+  .searchBox {
+    width: 60%;
+    border: red 4px solid;
+    justify-self: space-between;
   }
-}
-/* Navigation for Large Screens  -------------------------------------------------------- */
-.navBackground {
-  background-color: #36454f;
-}
-.navBar {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1200px;
-}
-nav {
-  width: 50%;
-  background-color: #36454f;
-}
-nav ul li.active a {
-  color: #fe5b35;
-}
-nav ul {
-  margin-left: 2%;
-  border-left: 1px solid rgba(0, 0, 0, 0.2);
-  display: flex;
-}
-nav ul li a {
-  display: block;
-  border: none;
-  border-right: 1px solid rgba(0, 0, 0, 0.2);
-  background: none;
-  font-size: 0.9rem;
-  padding: 0.7rem 0.9rem;
-  color: #ffffff;
-  text-decoration: none;
-  -webkit-transition: background 0.3s linear;
-  transition: background 0.3s linear;
-}
-nav ul li a:hover {
-  background: #2c3840;
-  color: #ffae42;
-}
-nav ul li ul {
-  /* rules for sub menu items*/
-  z-index: 99;
-  position: absolute;
-  background-color: #212b31;
-  left: -999em;
-  /*pushes the menu way off to the side */
-  width: 10em;
-  display: flex;
-  flex-direction: column;
-}
-nav ul li ul li {
-  /*overides the float and line from the parent ul*/
-  float: none;
-  border-right: none;
-  border-top: solid 1px rgba(0, 0, 0, 0.2);
-}
-nav ul li:hover ul {
-  /*this displays the menus as drop downs */
-  left: auto;
-  margin-left: 0;
+  .searchBox input {
+    margin-left: 25%;
+  }
+  .searchBox input[type=text]:focus {
+    width: 50%;
+  }
 }
 /* Clearfix: force and Element not to collapse --------*/
 .clearfix:after {
