four html pages added

--- a/less/main.less
+++ b/less/main.less
@@ -1,9 +1,8 @@
 //imports
 @import "reset.less";
 @import "variables.less";
-
 @import "landing.less";
 @import "header.less";
 @import "footer.less";
-
 @import "nav.less";
+@import "cruise.less";
