cruise page html added, styling begun

--- a/less/main.less
+++ b/less/main.less
@@ -6,3 +6,21 @@
 @import "footer.less";
 @import "nav.less";
 @import "cruise.less";
+
+
+//max size for all pages
+.sizeRestraint{
+    max-width: 1200px;
+    margin: 0 auto;
+    display:flex;
+    justify-content: space-evenly;    
+    padding-top: 2%;
+    padding-bottom: 2%;
+    flex-wrap: wrap;
+   
+}
+
+h1{
+    color: @PrimaryColor;
+    font-size: 4rem;
+}
