--- a/css/main.css
+++ b/css/main.css
@@ -144,15 +144,6 @@ h2 {
   text-align: center;
 }
 /*---------- Articles ----------------------*/
-.sizeRestraint {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-evenly;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  flex-wrap: wrap;
-}
 .articleOn {
   width: 23%;
   position: relative;
@@ -574,6 +565,25 @@ nav ul li:hover ul {
   display: table;
   clear: both;
 }
-.box {
+.left {
+  width: 33.33%;
+  border: solid blue 4px;
+  height: 400px;
+}
+.right {
+  width: 70%;
+  border: solid red 4px;
+}
+.sizeRestraint {
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
+  justify-content: space-evenly;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  flex-wrap: wrap;
+}
+h1 {
+  color: #36454f;
+  font-size: 4rem;
 }
