booking html and css working

--- a/less/main.less
+++ b/less/main.less
@@ -6,6 +6,8 @@
 @import "footer.less";
 @import "nav.less";
 @import "cruise.less";
+@import "booking.less";
+@import "agents.less";
 
 
 //max size for all pages
@@ -19,6 +21,14 @@
     flex-wrap: wrap;
    
 }
+
+.LimitSize{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-top: 2%;
+    padding-bottom:2%;
+    padding-left: 4%;
+}  
 
 h1{
     color: @PrimaryColor;
