--- a/css/main.css
+++ b/css/main.css
@@ -553,7 +553,7 @@ nav ul li:hover ul {
     justify-self: space-between;
   }
   .searchBox input {
-    margin-left: 25%;
+    margin-left: 30%;
   }
   .searchBox input[type=text]:focus {
     width: 50%;
@@ -565,6 +565,10 @@ nav ul li:hover ul {
   display: table;
   clear: both;
 }
+.box {
+  display: flex;
+  flex-wrap: wrap;
+}
 .left {
   width: 33.33%;
   border: solid blue 4px;
@@ -574,6 +578,40 @@ nav ul li:hover ul {
   width: 70%;
   border: solid red 4px;
 }
+form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding-top: 4%;
+}
+form select {
+  border: 1px solid #36454f;
+  color: #36454f;
+  width: 50%;
+  height: 44px;
+}
+form label {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 4%;
+  color: #36454f;
+  margin-bottom: 2%;
+}
+form input {
+  border: 1px solid #36454f;
+  color: #36454f;
+  width: 50%;
+  height: 44px;
+}
+.submit {
+  border: none;
+  background-color: #fe5b35;
+  color: #000;
+  width: 50%;
+  height: 44px;
+  border-radius: 20px;
+  font-size: 1.5rem;
+}
 .sizeRestraint {
   max-width: 1200px;
   margin: 0 auto;
@@ -582,6 +620,13 @@ nav ul li:hover ul {
   padding-top: 2%;
   padding-bottom: 2%;
   flex-wrap: wrap;
+}
+.LimitSize {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 4%;
 }
 h1 {
   color: #36454f;
