--- a/less/booking.less
+++ b/less/booking.less
@@ -11,6 +11,9 @@ form{
         color: @PrimaryColor;
         width: 50%;
         height: 44px;
+        @media @mobile{
+            width: 96%;
+        }
     }
 
 label{
@@ -26,7 +29,9 @@ label{
         color: @PrimaryColor;
         width: 50%;
         height: 44px;
-
+        @media @mobile{
+            width: 96%;
+        }
     }//label
 }//form
 
@@ -40,5 +45,9 @@ label{
     height: 44px;
     border-radius: 20px;
     font-size: 1.5rem;
+    @media @mobile{
+        width: 96%;
+    }
 
 }
+
