--- a/less/cruise.less
+++ b/less/cruise.less
@@ -1,21 +1,41 @@
 
 .box{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+ display:flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+
+
 }
-.left{
-    width: 33.33%;
-    border: solid blue 4px;
-    height: 400px;
+
+
+img{padding-bottom: 2%;
+    padding-top: 2%;
+   
+    @media @tablet{
+        width: 48%;
+    }
+    @media @mobile{
+        width: 100%;
+        padding-right:4%;
+    }
 }
 
 .right{
-    width: 70%;
-    border: solid red 4px;
+    width: 60%;
     display:flex;
     flex-direction: column;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    justify-self: center;
+@media @tablet{
+    width: 48%;
+    padding-right: 2%;
+}
 
+@media @mobile{
+    width: 100%;
+    padding-right: 2%;
+}
     
 .readMore{
     align-self: flex-end;
@@ -25,11 +45,16 @@
     width: 33%;
     height: 44px;
     border-radius: 20px;
-    font-size: 1.5rem;
+    font-size: 1rem;
     @media @mobile{
         width: 96%;
+        align-self: center;
     }
 
+}//readMore
+
+h2{
+    padding-bottom: 2%;
 }
 }
 
